--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/Logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/white_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Micasa</title>
+    <title>Homie</title>
 
     <!-- font awesome -->
     <link
